# neural_network_library

./: .gitignore  CONTRIBUTING.md  README.md
neural_network_library/: CMakeLists.txt  QUICKSTART.md  README.md  build.bat  build.sh
neural_network_library/build_comment_check/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  NeuralNetCpp.slnx  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  neuralnet.vcxproj  neuralnet.vcxproj.filters  regression_example.vcxproj  regression_example.vcxproj.filters  xor_example.vcxproj  xor_example.vcxproj.filters
neural_network_library/build_comment_check/Release/: neuralnet.lib
neural_network_library/build_comment_check/neuralnet.dir/Release/neuralnet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
neural_network_library/build_comment_check/regression_example.dir/Release/: regression_example.exe.recipe
neural_network_library/build_comment_check/regression_example.dir/Release/regressi.AACC6F20.tlog/: CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  regression_example.lastbuildstate
neural_network_library/build_comment_check/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
neural_network_library/build_comment_check/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
neural_network_library/build_comment_check/xor_example.dir/Release/: xor_example.exe.recipe
neural_network_library/build_comment_check/xor_example.dir/Release/xor_example.tlog/: CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
neural_network_library/build_comment_check_clean/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  NeuralNetCpp.slnx  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  neuralnet.vcxproj  neuralnet.vcxproj.filters  regression_example.vcxproj  regression_example.vcxproj.filters  xor_example.vcxproj  xor_example.vcxproj.filters
neural_network_library/build_comment_check_clean/Release/: neuralnet.lib
neural_network_library/build_comment_check_clean/neuralnet.dir/Release/: neuralnet.lib.recipe
neural_network_library/build_comment_check_clean/neuralnet.dir/Release/neuralnet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
neural_network_library/build_comment_check_clean/regression_example.dir/Release/: regression_example.exe.recipe
neural_network_library/build_comment_check_clean/regression_example.dir/Release/regressi.05827673.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  regression_example.lastbuildstate
neural_network_library/build_comment_check_clean/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
neural_network_library/build_comment_check_clean/xor_example.dir/Release/: xor_example.exe.recipe
neural_network_library/build_comment_check_clean/xor_example.dir/Release/xor_example.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
neural_network_library/build_docs/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  Doxyfile  NeuralNetCpp.slnx  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  docs.vcxproj  docs.vcxproj.filters  neuralnet.vcxproj  neuralnet.vcxproj.filters  regression_example.vcxproj  regression_example.vcxproj.filters  xor_example.vcxproj  xor_example.vcxproj.filters
neural_network_library/build_docs/docs/html/: _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  activations_8cpp.html  activations_8cpp.js  activations_8cpp_source.html  activations_8hpp.html  activations_8hpp.js  activations_8hpp_source.html  annotated.html  annotated_dup.js  api__groups_8dox.html  classes.html  classnn_1_1_adam-members.html  classnn_1_1_adam.html  classnn_1_1_adam.js  classnn_1_1_dropout-members.html  classnn_1_1_dropout.html  classnn_1_1_dropout.js  classnn_1_1_linear-members.html  classnn_1_1_linear.html  classnn_1_1_linear.js  classnn_1_1_module-members.html  classnn_1_1_module.html  classnn_1_1_module.js  classnn_1_1_optimizer-members.html  classnn_1_1_optimizer.html  classnn_1_1_optimizer.js  classnn_1_1_re_l_u-members.html  classnn_1_1_re_l_u.html  classnn_1_1_re_l_u.js  classnn_1_1_s_g_d-members.html  classnn_1_1_s_g_d.html  classnn_1_1_s_g_d.js  classnn_1_1_sequential-members.html  classnn_1_1_sequential.html  classnn_1_1_sequential.js  classnn_1_1_sigmoid-members.html  classnn_1_1_sigmoid.html  classnn_1_1_sigmoid.js  classnn_1_1_tanh-members.html  (+98 more)
neural_network_library/build_docs/docs/html/search/: all_0.js  all_1.js  (+98 more)
neural_network_library/build_docs_check/: CMakeCache.txt
neural_network_library/docs/: Doxyfile.in  api_groups.dox
neural_network_library/docs/pages/: loss_guide.dox  module_guide.dox  optimizer_guide.dox  tensor_guide.dox
neural_network_library/examples/: regression_example.cpp  xor_example.cpp
neural_network_library/include/: activations.hpp  losses.hpp  module.hpp  neural_network.hpp  optimizer.hpp  sequential.hpp  tensor.hpp
neural_network_library/src/: activations.cpp  losses.cpp  module.cpp  optimizer.cpp  sequential.cpp  tensor.cpp
(+16 files in other folders)
